# legacy-api-rs

./: Cargo.toml
configs/: smolLandConfig.json  smol_apa_config.json
src/: base_worker.rs  main.rs  utils.rs
src/smol_worker/: config.rs  mod.rs
src/smol_worker/graph_query/: query.rs
