[package]
name = "rust-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = {version = "0.13.0", features = ["reqwest-blocking"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = { version = "1.0.56", features = [] }
# For making http requests
reqwest = {version = "^0.11", features = ["json"]}
# This one enables us to use async operations
tokio = {version = "1.1.1", features = ["full"]}
# Error handling crate
anyhow = "1.0.39"   